k8s/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deno-hono-vite
  labels:
    app: deno-hono-vite
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: deno-hono-vite
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deno-hono-vite
  labels:
    app: deno-hono-vite
spec:
  selector:
    matchLabels:
      app: deno-hono-vite
  template:
    metadata:
      labels:
        app: deno-hono-vite
    spec:
      containers:
        - name: deno-hono-vite
          image: denoland/deno:alpine-2.0.0-rc.6
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/home/deno"
              name: data
          command: ["/bin/sh", "-c"]
          args:
            [
              "deno install && deno task build && deno serve -R --unstable-temporal src/server.tsx",
            ]
          workingDir: "/home/deno/deno-hono-vite"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deno-hono-vite
spec:
  ingressClassName: nginx
  rules:
    - host: "deno-hono-vite.cotyhamilton.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deno-hono-vite
                port:
                  number: 8000
